--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.4",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
